# extendrpolarsexamples

./: DESCRIPTION  NAMESPACE  README.md
R/: extendr-wrappers.R
man/: export_as_rpolars_df.Rd  import_rpolars_df_and_print.Rd  make_df.Rd  test_round_trip.Rd
src/: Makevars  Makevars.win  entrypoint.c  helloextendr-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-import_export.R  test-make_df.R
tests/testthat/_snaps/: make_df.md
