[package]
name = 'extendrpolarsexamples'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'extendrpolarsexamples'

[dependencies]
extendr-api = "*"
#extendr_polars = {git = "https://github.com/rpolars/extendr_polars"}
extendr_polars = {path = "../../../extendr-polars/extendr-polars"}
polars = "*"
